fixed logo being too big

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ section {
     right: 10px;
     bottom: 10px;
     z-index: 1000;
-    width: 100px; 
+    width: 50px; 
     height: auto;
 }
 section {
